--- a/Personal site/neakta.html
+++ b/Personal site/neakta.html
@@ -6,7 +6,6 @@
 		<meta name="author" content="Wyatt Johnson">
 		<meta name="description" content="Howdy! I'm Wyatt Johnson. I'm an experienced video game programmer with a love for building robust, elegant systems that are fun to interact with.">
 		<link href='style.css' rel='stylesheet' type='text/css'>
-		<link href='home_css.css' rel='stylesheet' type='text/css'>
 		<link rel="icon" href="favicon.ico">
 		
 	</head>
@@ -33,16 +32,14 @@
 					</td>
 					<td>
 						<h2>Play Trailer:</h2>
-							<video width=100% poster="images/neaktalogo.png" controls><source src="videos/neakta_trailer_full.mp4" type="video/mp4">
-								Your browser does not support HTML5 video
-							</video>
+							<iframe width=100% height="315" src="https://www.youtube.com/embed/SRmptnbXLNw?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<a href="files/NeakTasWrath.zip" download><h2 id="downloadLink">Download game<h2></a>
+						<a href="https://drive.google.com/open?id=0B18Ll1MrZ18jMWVrRkt3Y1JweGM" target="_blank"><h2 id="downloadLink">Download game<h2></a>
 					<td>
-						<img src="images/neakTaMonk.PNG" height=300px;>
+						<img width=100% src="images/neakTaMonk.PNG" height=300px;>
 					</td>
 				</tr>
 			</table>
