--- a/Personal site/amnesty.html
+++ b/Personal site/amnesty.html
@@ -6,7 +6,6 @@
 		<meta name="author" content="Wyatt Johnson">
 		<meta name="description" content="Howdy! I'm Wyatt Johnson. I'm an experienced video game programmer with a love for building robust, elegant systems that are fun to interact with.">
 		<link href='style.css' rel='stylesheet' type='text/css'>
-		<link href='home_css.css' rel='stylesheet' type='text/css'>
 		<link rel="icon" href="favicon.ico">
 		
 	</head>
@@ -29,13 +28,11 @@
 			<table id="contentTable">
 				<tr>
 					<td>
-						<p>As a programmer on Amnesty, I developed in an existing codebase to design, prototype, and implement new gameplay mechanics and behaviors in Unreal Engine 4 for a dark fantasy asymmetric multiplayer first-person action game. I collaborated with a team of programmers to further develop the game’s online network functionality, rigged a major character for animation, constructed the game’s website, and led the development team during a sprint using Agile methodology.</p><br><p>Game website at <a href="playamnesty.com">PlayAmnesty.com</a></p>
+						<p>As a programmer on Amnesty, I developed in an existing codebase to design, prototype, and implement new gameplay mechanics and behaviors in Unreal Engine 4 for a dark fantasy asymmetric multiplayer first-person action game. I collaborated with a team of programmers to further develop the game’s online network functionality, rigged a major character for animation, constructed the game’s website, and led the development team during a sprint using Agile methodology.</p><br><p>Game website at <a href="http://playamnesty.com">PlayAmnesty.com</a></p>
 					</td>
 					<td>
 							<h2>Play Trailer:</h2>
-							<video width=100% poster="images/amnestylogo.png" controls><source src="videos/amnesty_trailer_full.mp4" type="video/mp4">
-								Your browser does not support HTML5 video
-							</video>
+							<iframe width=100% height="315" src="https://www.youtube.com/embed/2cQc9Z7Od7Q?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</td>
 				</tr>
 				<tr>
@@ -43,7 +40,7 @@
 						<img src="images/amnestyDay.PNG" height=400px;>
 					</td>
 					<td>
-						<img src="images/monster.PNG" height=400px;>
+						<img width=100% src="images/monster.PNG" height=400px;>
 					</td>
 				</tr>
 			</table>
